fix: truncate after 3 lines

--- a/styles/Events.module.css
+++ b/styles/Events.module.css
@@ -75,6 +75,9 @@
 .event-header h2{
   overflow: hidden;
   text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
 }
 
 .event-content {
